[metadata]
name = worktime-tnorth
version = 0.0.1
author = Thibault North
author_email = thibault@north.li
description = A small program to record work time on projects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tnorth/
project_urls =
    Bug Tracker = https://github.com/tnorth
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
